# fastapi-standalone-di

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  hatch_build.py  pyproject.toml  search.json  zensical.toml
.github/actions/ensure-pages-published/: action.yml
.github/workflows/: ci.yml  zensical-develop.yml  zensical-preview.yml  zensical.yml
api/: index.html
dev/: search.json  sitemap.xml
dev/api/: index.html
dev/usage/: index.html
docs/: api.md  index.md  parameters.md  usage.md
preview/mkdocs-site/: 404.html  index.html
preview/mkdocs-site/api/: index.html
preview/mkdocs-site/parameters/: index.html
preview/mkdocs-site/usage/: index.html
preview/pages-publish-retry/: search.json
preview/zensical-anchors/: index.html  search.json
preview/zensical-anchors/api/: index.html
preview/zensical-anchors/usage/: index.html
preview/zensical-site/: 404.html
src/fastapi_standalone_di/: __init__.py  _compat.py  app_state.py  discovery.py  provides.py  registration.py  resolve.py  singleton.py
tests/: _future_annotations_deps.py  test_app_state.py  test_auto_bindings.py  test_compat.py  test_discovery.py  test_docs.py  test_future_annotations.py  test_packaging.py  test_params.py  test_readme.py  test_registration.py  test_request.py  test_resolve.py  test_scopes.py  test_security.py  test_singleton.py  test_standalone_app.py
usage/: index.html
